--- a/404.html
+++ b/404.html
@@ -12,7 +12,6 @@
 
   <link rel="stylesheet" href="/css/main.css">
   <link rel="canonical" href="https://huailiang.github.io/404.html">
-  <link rel="alternate" type="application/rss+xml" title="Huailiang Blog" href="https://huailiang.github.io/feed.xml" />
 </head>
 
 <body>
@@ -29,14 +28,8 @@
 
         <nav class="navbar sliding-panel-content">
           <ul>
-
-            <li><a href="/about" title="About">About</a>
-            </li>
-
-            <li><a href="/blog" title="Blog">Blog</a>
-            </li>
-
-            <li><a href="/feed.xml" target="_blank"><i class="icon icon-feed"></i></a></li>
+            <li><a href="/about" title="About">About</a></li>
+            <li><a href="/blog" title="Blog">Blog</a></li>
           </ul>
         </nav>
       </div>
