--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,8 @@ MathJax.Hub.Config({
 
 <p>Email: <a href="mailto:peng_huailiang@qq.com">peng_huailiang@qq.com</a></p>
 
-<p>Blog:   <a href="https://huailiang.github.io/">https://huailiang.github.io/</a></p>
+<p>Blog:   <a href="https://huailiang.github.io/">https://huailiang.github.io</a><br />
+          <a href="https://penghuailiang.gitee.io/">https://penghuailiang.gitee.io</a></p>
 
   </div>
 
