--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,7 @@ MathJax.Hub.Config({
 
 <p>目前隐匿于魔都上海，黄浦江畔，汲取于前沿的技术， 励志于改变世界， 改变人类。心怀梦想，永不放弃，一路向前！</p>
 
-<p>职业是游戏开发工程师，VR 探索工会活跃成员。先后就职于为DeNA、欢乐互娱、 完美世界。热衷于图形学、人工智能、便捷工具的领域开发。</p>
+<p>职业是游戏开发工程师，AR 探索工会活跃成员。先后就职于为DeNA、欢乐互娱、 完美世界。热衷于图形学、人工智能、便捷工具的领域开发。</p>
 
 <p><br /></p>
 
