--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@ layout: home
     <p>进化程度不明，多出没于博客、微博、知乎、Facebook、Github、UWA 等地带，绝招尚在开发中</p>
     <br>
 
-    <a href="{{ '/about' | prepend: site.baseurl }}" class="btn btn-ghost">about</a>&nbsp;&nbsp;
+    <a href="{{ '/about' | prepend: site.baseurl }}" class="btn btn-ghost">about</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="{{ '/blog' | prepend: site.baseurl }}" class="btn btn-ghost">blog</a>
 
     {% include social.html %}
