--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>进化程度不明，多出没于博客、微博、知乎、Facebook、Github、UWA 等地带，绝招尚在开发中</p>
     <br>
 
-    <a href="/about" class="btn btn-ghost">about</a>&nbsp;&nbsp;
+    <a href="/about" class="btn btn-ghost">about</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="/blog" class="btn btn-ghost">blog</a>
 
     <ul class="social">
